# deep-learning-from-scratch-5

./: .gitignore  README.md  pyproject.toml
src/step01/: __init__.py  common.py  norm_dist.py  norm_param.py  sample_avg.py  sample_sum.py  sample_try.py
src/step02/: common.py  fit.py  generate.py  hist.py  prob.py
src/step03/: mle.py  numpy_basis.py  numpy_matrix.py  plot_3d.py  plot_dataset.py  plot_norm.py
src/step04/: gmm.py  gmm_sampling.py  old_faithful.py
src/step06/: gradient.py  neuralnet.py  regression.py  vision.py
src/step07/: vae.py
src/utils/: utils.py
