[project]
name = "deep-learning-from-scratch-5"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "guricerin" }]
dependencies = ["numpy==1.24.2", "matplotlib==3.7.1"]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
norm_dist = "step01:norm_dist"
norm_param = "step01:norm_param"
sample_try = "step01:sample_try"
sample_avg = "step01:sample_avg"
sample_sum = "step01:sample_sum"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.4.8"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/step01"]
