[project]
name = "deep-learning-from-scratch-5"
version = "0.1.0"
authors = [{ name = "guricerin" }]
dependencies = ["numpy==1.24.2", "matplotlib==3.7.1"]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]

[tool.rye.scripts]
norm_dist = "python src/step01/norm_dist.py"
norm_param = "python src/step01/norm_param.py"
sample_try = "python src/step01/sample_try.py"
sample_avg = "python src/step01/sample_avg.py"
sample_sum = "python src/step01/sample_sum.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.4.8"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/step01"]
