[project]
name = "deep-learning-from-scratch-5"
version = "0.1.0"
authors = [{ name = "guricerin" }]
dependencies = [
    "numpy==1.24.2",
    "matplotlib==3.7.1",
    "scipy==1.10.1",
    "torch===2.0.0",
    "torchvision===0.15.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]

[tool.rye.scripts]
norm_dist = "python src/step01/norm_dist.py"
norm_param = "python src/step01/norm_param.py"
sample_try = "python src/step01/sample_try.py"
sample_avg = "python src/step01/sample_avg.py"
sample_sum = "python src/step01/sample_sum.py"

hist = "python src/step02/hist.py"
fit = "python src/step02/fit.py"
generate = "python src/step02/generate.py"
prob = "python src/step02/prob.py"

numpy_basis = "python src/step03/numpy_basis.py"
numpy_matrix = "python src/step03/numpy_matrix.py"
plot_3d = "python src/step03/plot_3d.py"
plot_norm = "python src/step03/plot_norm.py"
plot_dataset = "python src/step03/plot_dataset.py"
mle = "python src/step03/mle.py"

old_faithful = "python src/step04/old_faithful.py"
gmm_sampling = "python src/step04/gmm_sampling.py"
gmm = "python src/step04/gmm.py"

gradient = "python src/step06/gradient.py"
regression = "python src/step06/regression.py"
neuralnet = "python src/step06/neuralnet.py"
vision = "python src/step06/vision.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff>=0.4.8"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/step01"]
